Comprehensive project cleanup and enhancement:
- Updated visualization to save figures in PDF format
- Removed redundant test files
- Enhanced test_tnnls_real_datasets.py to test all methods
- Added proper project documentation
- Created cleaning scripts
- Added LICENSE, CONTRIBUTING.md, and .gitattributes
- Updated .gitignore for better coverage

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,34 @@ Thumbs.db
 data/results/
 *.log
 *.png
+*.pdf
+
+# Temporary files
+*.bak
+*.tmp
+*.temp
+.*.swp
+.*.swo
+*~
+
+# Coverage reports
+.coverage
+htmlcov/
+coverage.xml
+*.cover
+
+# pytest
+.pytest_cache/
+.pytest_report/
+
+# mypy
+.mypy_cache/
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
